--- a/index.html
+++ b/index.html
@@ -64,15 +64,9 @@
         <a href="mailto:nsrao34@gmail.com" class="btn btn-outline-secondary btn-lg px-4" role="button">Mail me</a>
       </div>
     </div>
-    <div class="overflow-hidden" style="max-height: 100vh;">
-      <div class="container px-5">
-        <img src="./me 2.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700"
-          height="500" loading="lazy">
-      </div>
-    </div>
   </div>
 
-  <div class="container px-4 py-5" id="featured-3">
+  <div class="container px-4" id="featured-3">
     <h2 class="pb-2 border-bottom">My Skills:</h2>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
